docs(intro-nlp): add ml-based sa lab

--- a/book/lectures/nlp_deep/tokenization/lab-train-tokenizers.ipynb
+++ b/book/lectures/nlp_deep/tokenization/lab-train-tokenizers.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "wiki = load_dataset(\"lcw99/wikipedia-korean-20221001\")"
+    "wiki = load_dataset(\"lcw99/wikipedia-korean-20221001\")\n"
    ]
   },
   {
@@ -117,7 +117,7 @@
     "\n",
     "text = \"\\n\".join(article[\"text\"] for article in wiki[\"train\"])\n",
     "with open(wiki_filepath, \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(text)\n"
+    "    f.write(text)"
    ]
   },
   {
@@ -159,7 +159,7 @@
     "tokenizer = Tokenizer(BPE())\n",
     "tokenizer.pre_tokenizer = Whitespace()\n",
     "tokenizer.train([wiki_filepath])\n",
-    "tokenizer.save(bpe_tokenizer_path)\n"
+    "tokenizer.save(bpe_tokenizer_path)"
    ]
   },
   {
@@ -183,7 +183,7 @@
     "\n",
     "tokenizer = Tokenizer(WordPiece())\n",
     "tokenizer.train([wiki_filepath])\n",
-    "tokenizer.save(wordpiece_tokenizer_path)\n"
+    "tokenizer.save(wordpiece_tokenizer_path)"
    ]
   },
   {
@@ -198,7 +198,15 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from tokenizers.models import Unigram\n",
     "\n",
@@ -207,7 +215,7 @@
     "\n",
     "tokenizer = Tokenizer(Unigram())\n",
     "tokenizer.train([wiki_filepath])\n",
-    "tokenizer.save(unigram_tokenizer_path)\n"
+    "tokenizer.save(unigram_tokenizer_path)"
    ]
   },
   {
@@ -413,7 +421,7 @@
     "# SentencePiece\n",
     "spm = spm.SentencePieceProcessor()\n",
     "spm.load(sentencepiece_tokenizer_path)\n",
-    "print(\"SentencePiece:\", spm.encode_as_pieces(sample_sentence))\n"
+    "print(\"SentencePiece:\", spm.encode_as_pieces(sample_sentence))"
    ]
   },
   {
@@ -464,7 +472,7 @@
     "    special_tokens=[\"<s>\", \"<pad>\", \"</s>\", \"<unk>\", \"<mask>\"],\n",
     ")\n",
     "tokenizer.train([\"wiki_ko.txt\"], trainer)\n",
-    "tokenizer.save(\"bpe_gpt_tokenizer.json\")"
+    "tokenizer.save(\"bpe_gpt_tokenizer.json\")\n"
    ]
   },
   {
@@ -500,7 +508,7 @@
     "    vocab_size=30000, special_tokens=[\"[PAD]\", \"[UNK]\", \"[CLS]\", \"[SEP]\", \"[MASK]\"]\n",
     ")\n",
     "tokenizer.train([\"wiki_ko.txt\"], trainer)\n",
-    "tokenizer.save(\"wordpiece_bert_tokenizer.json\")"
+    "tokenizer.save(\"wordpiece_bert_tokenizer.json\")\n"
    ]
   },
   {
@@ -531,7 +539,7 @@
     "    vocab_size=32000, special_tokens=[\"<pad>\", \"</s>\", \"<unk>\", \"<s>\"]\n",
     ")\n",
     "tokenizer.train([\"wiki_ko.txt\"], trainer)\n",
-    "tokenizer.save(\"unigram_t5_tokenizer.json\")"
+    "tokenizer.save(\"unigram_t5_tokenizer.json\")\n"
    ]
   },
   {
