--- a/book/lectures/nlp_intro/sentiments/lab-lexicon.ipynb
+++ b/book/lectures/nlp_intro/sentiments/lab-lexicon.ipynb
@@ -11,7 +11,7 @@
     "tags": []
    },
    "source": [
-    "# Lab: Lexicon-Based Sentiment Analysis\n",
+    "# Lab: Lexicon-based Sentiment Analysis\n",
     "\n",
     "In this lab session, we will explore various lexicon-based methods for sentiment analysis. Lexicon-based methods rely on a predefined list of words with associated sentiment scores to determine the overall sentiment of a text. We will use the following lexicon-based methods:\n",
     "\n",
@@ -67,7 +67,7 @@
     ")\n",
     "\n",
     "nltk.download(\"movie_reviews\")\n",
-    "nltk.download(\"vader_lexicon\")"
+    "nltk.download(\"vader_lexicon\")\n"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "source": [
     "fileids = movie_reviews.fileids()\n",
     "reviews = [movie_reviews.raw(fileid) for fileid in fileids]\n",
-    "categories = [movie_reviews.categories(fileid)[0] for fileid in fileids]\n"
+    "categories = [movie_reviews.categories(fileid)[0] for fileid in fileids]"
    ]
   },
   {
@@ -116,7 +116,7 @@
     "    print(\"Recall: \", recall_score(true_labels, predicted_labels, average=\"weighted\"))\n",
     "    print(\"F1 Score: \", f1_score(true_labels, predicted_labels, average=\"weighted\"))\n",
     "    print(\"Model Report: \\n___________________________________________________\")\n",
-    "    print(classification_report(true_labels, predicted_labels))"
+    "    print(classification_report(true_labels, predicted_labels))\n"
    ]
   },
   {
@@ -211,7 +211,7 @@
     "\n",
     "\n",
     "predictions = sentiment_TextBlob(reviews)\n",
-    "evaluate_classification_performance(categories, predictions)"
+    "evaluate_classification_performance(categories, predictions)\n"
    ]
   },
   {
@@ -313,7 +313,7 @@
     "\n",
     "\n",
     "predictions = sentiment_Afinn(reviews)\n",
-    "evaluate_classification_performance(categories, predictions)\n"
+    "evaluate_classification_performance(categories, predictions)"
    ]
   },
   {
@@ -378,7 +378,7 @@
     "\n",
     "\n",
     "predictions = sentiment_vader(reviews)\n",
-    "evaluate_classification_performance(categories, predictions)\n"
+    "evaluate_classification_performance(categories, predictions)"
    ]
   },
   {
