--- a/_sources/lectures/nlp_intro/sentiments/lab-ml.ipynb
+++ b/_sources/lectures/nlp_intro/sentiments/lab-ml.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "The Yelp review dataset contains reviews along with a numeric score for each review. Each score ranges from 1 to 5, where 1 represents a very poor review and 5 represents an excellent one.\n",
     "\n",
-    "## Task Details\n",
+    "### Task Details\n",
     "\n",
     "We'll be addressing two tasks in this session:\n",
     "\n",
@@ -31,7 +31,7 @@
     "\n",
     "In both tasks, we will employ a linear Support Vector Machine (SVM) with a one-versus-all multi-class handling strategy. The SVM algorithm is renowned for its effectiveness in high-dimensional spaces, making it suitable for text classification problems.\n",
     "\n",
-    "## Feature Engineering\n",
+    "### Feature Engineering\n",
     "\n",
     "Feature engineering is the process of designing and developing the representation of instances for a given task. This process determines the potential patterns that can be identified during learning.\n",
     "\n",
@@ -72,76 +72,35 @@
     "\n",
     "During the lab session, we will walk you through the process of extracting these features from the text data and training our SVM model for sentiment classification. By the end of this session, you should have a clear understanding of how to design, implement, and evaluate a sentiment classification task using a machine learning approach.\n",
     "\n",
-    "Let's begin!\n",
-    "\n",
-    "## Importing the Libraries\n",
+    "Let's begin!\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a91da6f4",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "## Loading the Dataset\n",
     "\n",
     "We'll start by importing the libraries we'll be using in this lab.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "09a57650",
    "metadata": {
     "tags": [
      "hide-output"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
-      "Requirement already satisfied: datasets in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (2.12.0)\n",
-      "Collecting imblearn\n",
-      "  Downloading imblearn-0.0-py2.py3-none-any.whl (1.9 kB)\n",
-      "Requirement already satisfied: requests>=2.19.0 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (2.28.2)\n",
-      "Requirement already satisfied: huggingface-hub<1.0.0,>=0.11.0 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (0.12.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (6.0)\n",
-      "Requirement already satisfied: fsspec[http]>=2021.11.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (2023.4.0)\n",
-      "Requirement already satisfied: numpy>=1.17 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (1.23.5)\n",
-      "Requirement already satisfied: xxhash in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (3.2.0)\n",
-      "Requirement already satisfied: dill<0.3.7,>=0.3.0 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (0.3.6)\n",
-      "Requirement already satisfied: multiprocess in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (0.70.14)\n",
-      "Requirement already satisfied: packaging in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (23.1)\n",
-      "Requirement already satisfied: pandas in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (1.5.3)\n",
-      "Requirement already satisfied: tqdm>=4.62.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (4.65.0)\n",
-      "Requirement already satisfied: responses<0.19 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (0.18.0)\n",
-      "Requirement already satisfied: pyarrow>=8.0.0 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (12.0.0)\n",
-      "Requirement already satisfied: aiohttp in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from datasets) (3.8.4)\n",
-      "Collecting imbalanced-learn\n",
-      "  Downloading imbalanced_learn-0.10.1-py3-none-any.whl (226 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m226.0/226.0 kB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: charset-normalizer<4.0,>=2.0 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from aiohttp->datasets) (3.1.0)\n",
-      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from aiohttp->datasets) (4.0.2)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from aiohttp->datasets) (1.8.2)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from aiohttp->datasets) (1.3.3)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from aiohttp->datasets) (1.3.1)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from aiohttp->datasets) (23.1.0)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from aiohttp->datasets) (6.0.4)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from huggingface-hub<1.0.0,>=0.11.0->datasets) (4.5.0)\n",
-      "Requirement already satisfied: filelock in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from huggingface-hub<1.0.0,>=0.11.0->datasets) (3.9.1)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (1.26.15)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (3.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (2022.12.7)\n",
-      "Requirement already satisfied: scipy>=1.3.2 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from imbalanced-learn->imblearn) (1.10.1)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from imbalanced-learn->imblearn) (1.2.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from imbalanced-learn->imblearn) (3.1.0)\n",
-      "Requirement already satisfied: scikit-learn>=1.0.2 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from imbalanced-learn->imblearn) (1.2.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from pandas->datasets) (2023.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from pandas->datasets) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas->datasets) (1.16.0)\n",
-      "Installing collected packages: imbalanced-learn, imblearn\n",
-      "Successfully installed imbalanced-learn-0.10.1 imblearn-0.0\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install datasets imblearn"
    ]
@@ -165,22 +124,15 @@
     "from datasets import load_dataset\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "a91da6f4",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
+   "id": "869b8ed9",
+   "metadata": {},
    "source": [
-    "## Loading the Dataset\n",
-    "\n",
     "We'll now load the dataset using the `datasets` module from the Hugging Face library. We'll be using the `argilla/tripadvisor-hotel-reviews` dataset, which contains hotel reviews along with their corresponding scores.\n"
    ]
   },
@@ -233,7 +185,7 @@
     "dataset = load_dataset(\"yelp_review_full\")\n",
     "\n",
     "# The dataset is returned as a 'DatasetDict', let's convert it to a pandas DataFrame\n",
-    "df = pd.DataFrame(dataset[\"train\"])"
+    "df = pd.DataFrame(dataset[\"train\"])\n"
    ]
   },
   {
@@ -326,7 +278,7 @@
     }
    ],
    "source": [
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -355,7 +307,7 @@
     "}\n",
     "\n",
     "# Map the sentiment\n",
-    "df[\"sentiment\"] = df[\"label\"].map(sentiment_mapping)"
+    "df[\"sentiment\"] = df[\"label\"].map(sentiment_mapping)\n"
    ]
   },
   {
@@ -378,7 +330,7 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    df[\"text\"], df[\"sentiment\"], test_size=0.2, random_state=42\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -407,7 +359,7 @@
     ")\n",
     "\n",
     "X_train_balanced = X_res[\"text\"]\n",
-    "y_train_balanced = y_res[\"sentiment\"]\n"
+    "y_train_balanced = y_res[\"sentiment\"]"
    ]
   },
   {
@@ -484,7 +436,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from wordcloud import WordCloud"
+    "from wordcloud import WordCloud\n"
    ]
   },
   {
@@ -519,7 +471,7 @@
     "plt.title(\"Distribution of Sentiments\")\n",
     "plt.xlabel(\"Sentiment\")\n",
     "plt.ylabel(\"Count\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -571,7 +523,7 @@
     "    print(f\"Sample {sentiment} review:\")\n",
     "    sample_review = df[df[\"sentiment\"] == sentiment][\"text\"].iloc[0]\n",
     "    print(sample_review)\n",
-    "    print(\"\\n\")\n"
+    "    print(\"\\n\")"
    ]
   },
   {
@@ -653,7 +605,7 @@
     "    plt.imshow(wordcloud, interpolation=\"bilinear\")\n",
     "    plt.axis(\"off\")\n",
     "    plt.title(f\"Words frequently appearing in {sentiment} reviews\")\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -695,7 +647,7 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import WordNetLemmatizer\n",
-    "import string\n"
+    "import string"
    ]
   },
   {
@@ -725,7 +677,7 @@
     "\n",
     "def remove_stopwords(text):\n",
     "    stop_words = set(stopwords.words(\"english\"))\n",
-    "    return \" \".join([word for word in word_tokenize(text) if word not in stop_words])\n"
+    "    return \" \".join([word for word in word_tokenize(text) if word not in stop_words])"
    ]
   },
   {
@@ -754,7 +706,7 @@
     "df[\"text\"] = df[\"text\"].apply(remove_stopwords)\n",
     "\n",
     "# Lemmatize the text\n",
-    "df[\"text\"] = df[\"text\"].apply(lemmatize_text)\n"
+    "df[\"text\"] = df[\"text\"].apply(lemmatize_text)"
    ]
   },
   {
@@ -774,7 +726,7 @@
    "outputs": [],
    "source": [
     "vectorizer = TfidfVectorizer(max_features=5000)\n",
-    "X = vectorizer.fit_transform(df[\"text\"])\n"
+    "X = vectorizer.fit_transform(df[\"text\"])"
    ]
   },
   {
@@ -794,7 +746,7 @@
    "outputs": [],
    "source": [
     "le = LabelEncoder()\n",
-    "y = le.fit_transform(df[\"sentiment\"])\n"
+    "y = le.fit_transform(df[\"sentiment\"])"
    ]
   },
   {
@@ -815,7 +767,7 @@
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -842,7 +794,7 @@
    "outputs": [],
    "source": [
     "from sklearn import svm\n",
-    "from sklearn.metrics import classification_report\n"
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
@@ -879,7 +831,7 @@
     "model = svm.LinearSVC(random_state=42)\n",
     "\n",
     "# Train the model\n",
-    "model.fit(X_train, y_train)\n"
+    "model.fit(X_train, y_train)"
    ]
   },
   {
@@ -921,7 +873,7 @@
     "y_pred = model.predict(X_test)\n",
     "\n",
     "# Print the classification report\n",
-    "print(classification_report(y_test, y_pred, target_names=le.classes_))\n"
+    "print(classification_report(y_test, y_pred, target_names=le.classes_))"
    ]
   },
   {
@@ -972,7 +924,7 @@
     "plt.title(\"Confusion Matrix\")\n",
     "plt.xlabel(\"Predicted Label\")\n",
     "plt.ylabel(\"True Label\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
