chore(references): remove unnecessary "and others" in author list

--- a/book/references.bib
+++ b/book/references.bib
@@ -507,7 +507,7 @@
 
 @article{lee2019deciphering,
   title     = {Deciphering Monetary Policy Board Minutes with Text Mining: The Case of South Korea},
-  author    = {Lee, Young Joon and Kim, Soohyon and Park, Ki Young and others},
+  author    = {Lee, Young Joon and Kim, Soohyon and Park, Ki Young},
   journal   = {Korean Economic Review},
   volume    = {35},
   pages     = {471--511},
