docs(intro-nlp): update lab-korean

--- a/book/lectures/nlp_intro/tokenization/lab-korean.ipynb
+++ b/book/lectures/nlp_intro/tokenization/lab-korean.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "hide-output"
@@ -31,51 +31,29 @@
      "text": [
       "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
       "Requirement already satisfied: ekonlpy in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (1.1.7)\n",
-      "Collecting kss\n",
-      "  Downloading kss-4.5.3.tar.gz (78 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.5/78.5 kB\u001b[0m \u001b[31m6.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: pandas<2.0.0,>=1.5.3 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from ekonlpy) (1.5.3)\n",
       "Requirement already satisfied: nltk<4.0.0,>=3.8.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from ekonlpy) (3.8.1)\n",
-      "Requirement already satisfied: fugashi<2.0.0,>=1.2.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from ekonlpy) (1.2.1)\n",
       "Requirement already satisfied: scipy<2.0.0,>=1.10.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from ekonlpy) (1.10.1)\n",
+      "Requirement already satisfied: fugashi<2.0.0,>=1.2.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from ekonlpy) (1.2.1)\n",
+      "Requirement already satisfied: pandas<2.0.0,>=1.5.3 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from ekonlpy) (1.5.3)\n",
       "Requirement already satisfied: mecab-ko-dic<2.0.0,>=1.0.0 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from ekonlpy) (1.0.0)\n",
-      "Collecting emoji==1.2.0\n",
-      "  Downloading emoji-1.2.0-py3-none-any.whl (131 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m131.3/131.3 kB\u001b[0m \u001b[31m15.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: regex in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from kss) (2023.3.23)\n",
-      "Collecting pecab\n",
-      "  Downloading pecab-1.0.8.tar.gz (26.4 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m26.4/26.4 MB\u001b[0m \u001b[31m83.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: networkx in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from kss) (3.0)\n",
       "Requirement already satisfied: click in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from nltk<4.0.0,>=3.8.1->ekonlpy) (8.1.3)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from nltk<4.0.0,>=3.8.1->ekonlpy) (2023.3.23)\n",
       "Requirement already satisfied: tqdm in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from nltk<4.0.0,>=3.8.1->ekonlpy) (4.65.0)\n",
       "Requirement already satisfied: joblib in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from nltk<4.0.0,>=3.8.1->ekonlpy) (1.2.0)\n",
       "Requirement already satisfied: pytz>=2020.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from pandas<2.0.0,>=1.5.3->ekonlpy) (2023.3)\n",
-      "Requirement already satisfied: numpy>=1.20.3 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from pandas<2.0.0,>=1.5.3->ekonlpy) (1.23.5)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from pandas<2.0.0,>=1.5.3->ekonlpy) (2.8.2)\n",
-      "Requirement already satisfied: pyarrow in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from pecab->kss) (12.0.0)\n",
-      "Collecting pytest\n",
-      "  Downloading pytest-7.3.1-py3-none-any.whl (320 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m320.5/320.5 kB\u001b[0m \u001b[31m151.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: six>=1.5 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas<2.0.0,>=1.5.3->ekonlpy) (1.16.0)\n",
-      "Collecting exceptiongroup>=1.0.0rc8\n",
-      "  Downloading exceptiongroup-1.1.1-py3-none-any.whl (14 kB)\n",
-      "Collecting pluggy<2.0,>=0.12\n",
-      "  Downloading pluggy-1.0.0-py2.py3-none-any.whl (13 kB)\n",
-      "Requirement already satisfied: packaging in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from pytest->pecab->kss) (23.1)\n",
-      "Collecting tomli>=1.0.0\n",
-      "  Downloading tomli-2.0.1-py3-none-any.whl (12 kB)\n",
-      "Collecting iniconfig\n",
-      "  Downloading iniconfig-2.0.0-py3-none-any.whl (5.9 kB)\n",
-      "Building wheels for collected packages: kss, pecab\n",
-      "  Building wheel for kss (setup.py) ... \u001b[?25l|"
+      "Requirement already satisfied: numpy>=1.20.3 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from pandas<2.0.0,>=1.5.3->ekonlpy) (1.23.5)\n",
+      "Requirement already satisfied: six>=1.5 in /home/yjlee/.cache/pypoetry/virtualenvs/lecture-_dERj_9R-py3.8/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas<2.0.0,>=1.5.3->ekonlpy) (1.16.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install ekonlpy kss"
+    "%pip install ekonlpy\n",
+    "# %pip install kss"
    ]
   },
   {
@@ -92,9 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('금', 'MAJ'), ('통', 'MAG'), ('위', 'NNG'), ('는', 'JX'), ('따라서', 'MAJ'), ('물가', 'NNG'), ('안정', 'NNG'), ('과', 'JC'), ('병행', 'NNG'), (',', 'SC'), ('경기', 'NNG'), ('상황', 'NNG'), ('에', 'JKB'), ('유의', 'NNG'), ('하', 'XSV'), ('는', 'ETM'), ('금리', 'NNG'), ('정책', 'NNG'), ('을', 'JKO'), ('펼쳐', 'VV+EC'), ('나가', 'VX'), ('기', 'ETN'), ('로', 'JKB'), ('했', 'VV+EP'), ('다고', 'EC'), ('밝혔', 'VV+EP'), ('다', 'EF'), ('.', 'SF')]\n"
+     ]
+    }
+   ],
    "source": [
     "from ekonlpy.mecab import MeCab\n",
     "\n",
@@ -114,14 +100,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('금통위', 'NNG'), ('는', 'JX'), ('따라서', 'MAJ'), ('물가', 'NNG'), ('안정', 'NNG'), ('과', 'JC'), ('병행', 'NNG'), (',', 'SC'), ('경기', 'NNG'), ('상황', 'NNG'), ('에', 'JKB'), ('유의', 'NNG'), ('하', 'XSV'), ('는', 'ETM'), ('금리', 'NNG'), ('정책', 'NNG'), ('을', 'JKO'), ('펼쳐', 'VV'), ('나가', 'VX'), ('기', 'ETN'), ('로', 'JKB'), ('했', 'VV'), ('다고', 'EC'), ('밝혔', 'VV'), ('다', 'EF'), ('.', 'SF')]\n"
+     ]
+    }
+   ],
    "source": [
     "from ekonlpy.tag import Mecab\n",
     "\n",
     "mecab = Mecab()\n",
-    "mecab.add_dictionary(\"금통위\", \"NNG\")"
+    "mecab.add_dictionary(\"금통위\", \"NNG\")\n",
+    "print(mecab.pos(\"금통위는 따라서 물가안정과 병행, 경기상황에 유의하는 금리정책을 펼쳐나가기로 했다고 밝혔다.\"))\n"
    ]
   },
   {
