refactor(nlp_intro): rename coherence-practice.ipynb and practice.ipynb to lab-coherence.ipynb and lab-topic.ipynb respectively.

--- a/book/lectures/nlp_intro/topic/lab-coherence.ipynb
+++ b/book/lectures/nlp_intro/topic/lab-coherence.ipynb
@@ -11,7 +11,7 @@
     "tags": []
    },
    "source": [
-    "# Topic Coherence in Practice\n",
+    "# Lab: Topic Coherence\n",
     "\n",
     "In this section, we will evaluate some topics using the `20newsgroups` dataset as a reference corpus to illustrate topic coherence in practice. We will first preprocess the data and then create some random topics. Finally, we will compute the coherence scores for these topics using Gensim's CoherenceModel.\n"
    ]
@@ -66,7 +66,7 @@
     "tokenizer = lambda s: re.findall(\"\\w+\", s.lower())\n",
     "texts = [tokenizer(t) for t in texts]\n",
     "stopwords = set(stopwords.words(\"english\"))\n",
-    "texts = [[w for w in t if w not in stopwords and len(w) > 1] for t in texts]\n"
+    "texts = [[w for w in t if w not in stopwords and len(w) > 1] for t in texts]"
    ]
   },
   {
@@ -94,7 +94,7 @@
     "finder = BigramCollocationFinder.from_words(sum(texts[:100], []))\n",
     "bgm = BigramAssocMeasures()\n",
     "score = bgm.mi_like\n",
-    "collocations = {\"_\".join(bigram): pmi for bigram, pmi in finder.score_ngrams(score)}\n"
+    "collocations = {\"_\".join(bigram): pmi for bigram, pmi in finder.score_ngrams(score)}"
    ]
   },
   {
@@ -213,7 +213,7 @@
     "    sorted(collocations.items(), key=lambda x: x[1], reverse=True),\n",
     "    columns=[\"bigram\", \"score\"],\n",
     ")\n",
-    "collocations.head(10)\n"
+    "collocations.head(10)"
    ]
   },
   {
@@ -270,7 +270,7 @@
     ")\n",
     "\n",
     "# Compute coherence scores per topic\n",
-    "coherence_per_topic_umass = cm_umass.get_coherence_per_topic()"
+    "coherence_per_topic_umass = cm_umass.get_coherence_per_topic()\n"
    ]
   },
   {
@@ -418,7 +418,7 @@
     "        + [\"u_mass\"] * len(topics),\n",
     "    }\n",
     ")\n",
-    "all_coherence_scores"
+    "all_coherence_scores\n"
    ]
   },
   {
@@ -511,7 +511,7 @@
     "# Add a y-label to the leftmost subplot\n",
     "axes[0].set_ylabel(\"Coherence Score\")\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -526,6 +526,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e7633ddc",
    "metadata": {},
