--- a/book/lectures/nlp_intro/topic/lab-topic.ipynb
+++ b/book/lectures/nlp_intro/topic/lab-topic.ipynb
@@ -11,7 +11,7 @@
     "tags": []
    },
    "source": [
-    "# Topic Modeling in Practice\n",
+    "# Lab: Topic Modeling\n",
     "\n",
     "## The problem\n",
     "\n",
@@ -157,7 +157,7 @@
     "newsgroups_test = fetch_20newsgroups(\n",
     "    subset=\"test\", categories=categories, remove=remove\n",
     ")\n",
-    "newsgroups_train.filenames.shape, newsgroups_train.target.shape"
+    "newsgroups_train.filenames.shape, newsgroups_train.target.shape\n"
    ]
   },
   {
@@ -212,7 +212,7 @@
     }
    ],
    "source": [
-    "print(\"\\n\".join(newsgroups_train.data[:2]))\n"
+    "print(\"\\n\".join(newsgroups_train.data[:2]))"
    ]
   },
   {
@@ -247,7 +247,7 @@
     }
    ],
    "source": [
-    "np.array(newsgroups_train.target_names)[newsgroups_train.target[:3]]"
+    "np.array(newsgroups_train.target_names)[newsgroups_train.target[:3]]\n"
    ]
   },
   {
@@ -277,7 +277,7 @@
     }
    ],
    "source": [
-    "newsgroups_train.target[:10]"
+    "newsgroups_train.target[:10]\n"
    ]
   },
   {
@@ -287,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_topics, num_top_words = 6, 8"
+    "num_topics, num_top_words = 6, 8\n"
    ]
   },
   {
@@ -348,7 +348,7 @@
     "\n",
     "STOPWORDS = stopwords.words(\"english\")\n",
     "print(len(STOPWORDS))\n",
-    "print(STOPWORDS[:10])"
+    "print(STOPWORDS[:10])\n"
    ]
   },
   {
@@ -368,7 +368,7 @@
     "wnl = stem.WordNetLemmatizer()\n",
     "porter = stem.porter.PorterStemmer()\n",
     "\n",
-    "word_list = [\"feet\", \"foot\", \"foots\", \"footing\"]"
+    "word_list = [\"feet\", \"foot\", \"foots\", \"footing\"]\n"
    ]
   },
   {
@@ -389,7 +389,7 @@
     }
    ],
    "source": [
-    "[wnl.lemmatize(word) for word in word_list]"
+    "[wnl.lemmatize(word) for word in word_list]\n"
    ]
   },
   {
@@ -410,7 +410,7 @@
     }
    ],
    "source": [
-    "[porter.stem(word) for word in word_list]"
+    "[porter.stem(word) for word in word_list]\n"
    ]
   },
   {
@@ -467,7 +467,7 @@
     "print(vocab.shape)\n",
     "\n",
     "# Display the last 10 terms in the vocabulary\n",
-    "print(vocab[-10:])\n"
+    "print(vocab[-10:])"
    ]
   },
   {
@@ -576,7 +576,7 @@
     "    # Helper function to retrieve top words for each topic\n",
     "    top_words = lambda t: [vocab[i] for i in np.argsort(t)[: -num_top_words - 1 : -1]]\n",
     "    topic_words = [top_words(t) for t in a]\n",
-    "    return [\" \".join(t) for t in topic_words]\n"
+    "    return [\" \".join(t) for t in topic_words]"
    ]
   },
   {
@@ -612,7 +612,7 @@
    ],
    "source": [
     "# Display the top topics extracted using SVD\n",
-    "show_topics(Vh[:10])\n"
+    "show_topics(Vh[:10])"
    ]
   },
   {
@@ -715,7 +715,7 @@
    ],
    "source": [
     "# Display the top topics extracted using NMF\n",
-    "show_topics(H1)\n"
+    "show_topics(H1)"
    ]
   },
   {
