chore(nlp_intro): Rename files and directories to fix typos and improve organization

--- a/book/references.bib
+++ b/book/references.bib
@@ -676,3 +676,22 @@
   journal={arXiv preprint arXiv:1804.10959},
   year={2018}
 }
+
+@article{harris1954distributional,
+  title={Distributional structure},
+  author={Harris, Zellig S},
+  journal={Word},
+  volume={10},
+  number={2-3},
+  pages={146--162},
+  year={1954},
+  publisher={Taylor \& Francis}
+}
+
+@article{firth1957synopsis,
+  title={A synopsis of linguistic theory, 1930-1955},
+  author={Firth, John},
+  journal={Studies in linguistic analysis},
+  pages={10--32},
+  year={1957}
+}
