docs(intro-nlp): update embeddings lecture

--- a/book/lectures/nlp_intro/embeddings/w2v.ipynb
+++ b/book/lectures/nlp_intro/embeddings/w2v.ipynb
@@ -21,7 +21,7 @@
    "id": "faf2433c",
    "metadata": {},
    "source": [
-    "### Main idea\n",
+    "## Main idea\n",
     "\n",
     "- Use a `binary classifier` to predict which words appear in the context of (i.e. near) a target word.\n",
     "- The `parameters of that classifier` provide a dense vector representation of the target word (embedding).\n",
@@ -184,7 +184,7 @@
     "        for w in context:\n",
     "            skip_grams.append([target, w])\n",
     "\n",
-    "    return skip_grams"
+    "    return skip_grams\n"
    ]
   },
   {
@@ -216,7 +216,7 @@
     }
    ],
    "source": [
-    "skipgram(\"I like deep learning because it is fun\".split(), 1)"
+    "skipgram(\"I like deep learning because it is fun\".split(), 1)\n"
    ]
   },
   {
@@ -255,7 +255,7 @@
     "\n",
     "    def get_word_emdedding(self, word):\n",
     "        word = torch.tensor([self.word_to_ix[word]])\n",
-    "        return self.embedding(word).view(1, -1)"
+    "        return self.embedding(word).view(1, -1)\n"
    ]
   },
   {
@@ -296,7 +296,7 @@
     "model = skipgramModel(vocab_size, embedding_size, word_to_id)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.01)"
+    "optimizer = optim.Adam(model.parameters(), lr=0.01)\n"
    ]
   },
   {
@@ -386,7 +386,7 @@
     "        print(\"Epoch:\", \"%04d\" % (epoch + 1), \"cost =\", \"{:.6f}\".format(loss))\n",
     "\n",
     "    loss.backward(retain_graph=True)\n",
-    "    optimizer.step()"
+    "    optimizer.step()\n"
    ]
   },
   {
@@ -434,7 +434,7 @@
     "    plt.annotate(\n",
     "        w, xy=(x, y), xytext=(5, 2), textcoords=\"offset points\", ha=\"right\", va=\"bottom\"\n",
     "    )\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -471,7 +471,7 @@
     "        \"Accuracy: {:.1f}% ({:d}/{:d})\".format(\n",
     "            correct_ct / len(test_data) * 100, correct_ct, len(test_data)\n",
     "        )\n",
-    "    )"
+    "    )\n"
    ]
   },
   {
@@ -489,7 +489,7 @@
     }
    ],
    "source": [
-    "skipgram_test(skipgram(words), model)"
+    "skipgram_test(skipgram(words), model)\n"
    ]
   },
   {
@@ -523,7 +523,7 @@
     "    model_pred.append(word)\n",
     "    e += 1\n",
     "\n",
-    "\" \".join(model_pred)"
+    "\" \".join(model_pred)\n"
    ]
   },
   {
@@ -618,7 +618,7 @@
     "        target = words[i]\n",
     "        data.append((context, target))\n",
     "\n",
-    "    return data"
+    "    return data\n"
    ]
   },
   {
@@ -651,7 +651,7 @@
     }
    ],
    "source": [
-    "CBOW(\"I like deep learning because it is fun\".split())"
+    "CBOW(\"I like deep learning because it is fun\".split())\n"
    ]
   },
   {
@@ -700,7 +700,7 @@
     "\n",
     "    def get_word_emdedding(self, word):\n",
     "        word = torch.tensor([self.word_to_ix[word]])\n",
-    "        return self.embeddings(word).view(1, -1)"
+    "        return self.embeddings(word).view(1, -1)\n"
    ]
   },
   {
@@ -746,7 +746,7 @@
     "model = CBOW_Model(vocab_size, EMDEDDING_DIM, word_to_id)\n",
     "\n",
     "loss_function = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.SGD(model.parameters(), lr=0.01)"
+    "optimizer = torch.optim.SGD(model.parameters(), lr=0.01)\n"
    ]
   },
   {
@@ -796,7 +796,7 @@
     "    total_loss.backward()\n",
     "    optimizer.step()\n",
     "    if (epoch + 1) % 10 == 0:\n",
-    "        print(f\"Epoch: {epoch}, Loss: {total_loss.item()}\")"
+    "        print(f\"Epoch: {epoch}, Loss: {total_loss.item()}\")\n"
    ]
   },
   {
@@ -843,7 +843,7 @@
     "    plt.annotate(\n",
     "        w, xy=(x, y), xytext=(5, 2), textcoords=\"offset points\", ha=\"right\", va=\"bottom\"\n",
     "    )\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -877,7 +877,7 @@
     "        \"Accuracy: {:.1f}% ({:d}/{:d})\".format(\n",
     "            correct_ct / len(test_data) * 100, correct_ct, len(test_data)\n",
     "        )\n",
-    "    )"
+    "    )\n"
    ]
   },
   {
@@ -895,7 +895,7 @@
     }
    ],
    "source": [
-    "CBOW_test(data, model)"
+    "CBOW_test(data, model)\n"
    ]
   },
   {
@@ -907,7 +907,7 @@
    "source": [
     "context = [\"chip\", \"name\", \"technology\", \"inc\"]\n",
     "context_vector = words_to_vector(context, word_to_id)\n",
-    "a = model(context_vector)"
+    "a = model(context_vector)\n"
    ]
   },
   {
@@ -928,7 +928,7 @@
    ],
    "source": [
     "print(f\"Context: {context}\\n\")\n",
-    "print(f\"Prediction: {id_to_word[torch.argmax(a[0]).item()]}\")"
+    "print(f\"Prediction: {id_to_word[torch.argmax(a[0]).item()]}\")\n"
    ]
   },
   {
