docs(intro-nlp): update language model lecture

--- a/book/lectures/nlp_intro/lm/usage.ipynb
+++ b/book/lectures/nlp_intro/lm/usage.ipynb
@@ -6,7 +6,7 @@
    "id": "5021ca89",
    "metadata": {},
    "source": [
-    "# Generating Text with Language Models\n",
+    "# Usage of Language Models\n",
     "\n",
     "## Sampling Sentences from a Language Model\n",
     "\n",
@@ -69,7 +69,7 @@
     "\n",
     "# Generate 5 sentences\n",
     "for _ in range(5):\n",
-    "    print(generate_sentence(bigram_model))"
+    "    print(generate_sentence(bigram_model))\n"
    ]
   },
   {
@@ -159,7 +159,7 @@
     "# Create bigram, trigram, and 4-gram models\n",
     "bigram_model = create_ngram_model(news_sents, 2)\n",
     "trigram_model = create_ngram_model(news_sents, 3)\n",
-    "fourgram_model = create_ngram_model(news_sents, 4)"
+    "fourgram_model = create_ngram_model(news_sents, 4)\n"
    ]
   },
   {
@@ -182,7 +182,7 @@
     "# Generate sentences using the models\n",
     "print(\"Bigram model sentence:\", generate_sentence(bigram_model))\n",
     "print(\"Trigram model sentence:\", generate_sentence(trigram_model))\n",
-    "print(\"4-gram model sentence:\", generate_sentence(fourgram_model))\n"
+    "print(\"4-gram model sentence:\", generate_sentence(fourgram_model))"
    ]
   },
   {
