docs(deepnlp): update tokenization pipeline

--- a/book/lectures/nlp_deep/tokenization/pipeline.ipynb
+++ b/book/lectures/nlp_deep/tokenization/pipeline.ipynb
@@ -90,6 +90,70 @@
    "source": [
     "In this example, we're using the tokenizer for the `bert-base-uncased` model. The `normalize_str` method applies the normalizer to the input string, converting all characters to lowercase and removing any special characters.\n",
     "\n",
+    "#### Unicode Normalization\n",
+    "\n",
+    "**TL;DR**\n",
+    "\n",
+    "Use `NFKC` normalization to normalize your text before training your language model.\n",
+    "\n",
+    "**Unicode Normalization Forms**\n",
+    "\n",
+    "There are four normalization forms:\n",
+    "\n",
+    "- **NFC**: Normalization Form Canonical Composition\n",
+    "- **NFD**: Normalization Form Canonical Decomposition\n",
+    "- **NFKC**: Normalization Form Compatibility Composition\n",
+    "- **NFKD**: Normalization Form Compatibility Decomposition\n",
+    "\n",
+    "In the above forms, \"C\" stands for \"Canonical\" and \"K\" stands for \"Compatibility\". The \"C\" forms are the most commonly used. The \"K\" forms are used when you need to convert characters to their compatibility representation. For example, the \"K\" forms will convert \"ﬁ\" to \"fi\".\n",
+    "\n",
+    "There two main differences between the two sets of forms:\n",
+    "\n",
+    "- The length of the string is changed or not: NFC and NFKC always produce a string of the same length or shorter, while NFD and NFKD may produce a string that is longer.\n",
+    "- The original string is changed or not: NFC and NFD always produce a string that is identical to the original string, while NFKC and NFKD may produce a string that is different from the original string.\n",
+    "\n",
+    "**Unicode Normalization in Python**\n",
+    "\n",
+    "In Python, you can use the `unicodedata` module to normalize your text. The `unicodedata.normalize` function takes two arguments:\n",
+    "\n",
+    "- `form`: The normalization form to use. This can be one of the following: `NFC`, `NFD`, `NFKC`, `NFKD`.\n",
+    "- `unistr`: The string to normalize.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "718b307b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original: ａｂｃＡＢＣ１２３가나다…, 13\n",
+      "NFC: ａｂｃＡＢＣ１２３가나다…, 13\n",
+      "NFD: ａｂｃＡＢＣ１２３가나다…, 16\n",
+      "NFKC: abcABC123가나다..., 15\n",
+      "NFKD: abcABC123가나다..., 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "import unicodedata\n",
+    "\n",
+    "text = \"ａｂｃＡＢＣ１２３가나다…\"\n",
+    "print(f\"Original: {text}, {len(text)}\")\n",
+    "for form in [\"NFC\", \"NFD\", \"NFKC\", \"NFKD\"]:\n",
+    "    ntext = unicodedata.normalize(form, text)\n",
+    "    print(f\"{form}: {ntext}, {len(ntext)}\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "cd35edea",
+   "metadata": {},
+   "source": [
     "### Pre-tokenization\n",
     "\n",
     "Next, we perform pre-tokenization. This involves splitting the text into preliminary tokens:\n"
@@ -119,7 +183,7 @@
    ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
-    "tokenizer.backend_tokenizer.pre_tokenizer.pre_tokenize_str(\"Hello, how are  you?\")"
+    "tokenizer.backend_tokenizer.pre_tokenizer.pre_tokenize_str(\"Hello, how are  you?\")\n"
    ]
   },
   {
@@ -208,7 +272,7 @@
    ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
-    "tokenizer.backend_tokenizer.pre_tokenizer.pre_tokenize_str(\"Hello, how are  you?\")"
+    "tokenizer.backend_tokenizer.pre_tokenizer.pre_tokenize_str(\"Hello, how are  you?\")\n"
    ]
   },
   {
@@ -247,7 +311,7 @@
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
     "tokens = tokenizer.tokenize(\"Hello, how are you?\")\n",
     "input_ids = tokenizer.convert_tokens_to_ids(tokens)\n",
-    "input_ids"
+    "input_ids\n"
    ]
   },
   {
@@ -378,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
